# WebSiteBase

./: BACKLOG.md  README.md  SECURITY-NICHE-AUDIT.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MONITORING.md  README.md  SEARCH.md  SECURITY.md  SESSIONS.md  deny.toml  docker-compose.observability.yml  docker-compose.search.yml  docker-compose.yml  rust-toolchain.toml
backend/.sqlx/: query-14312227b2b6895d7e238bc0d115578a6750fd8c1fd3c550af9ff25790f9abd2.json  query-1b19c6180196337e0600924f028c721334a3f24faad6c46c0423bed04d3b4bdd.json  query-1db73a62c0fd7de93e2916b5d957b4638c996c760fbc6b800dfe212f543513c0.json  query-228d5e2b0dd51ff24594c7c1d81cb58c42fbf8d153f509ba43e8f5ec57460080.json  query-28ab0ad9e5697bfa258dfd7baf09943ab21e2145466474a27e2f294c5815839a.json  query-60aefa77ac67b8279777a4639cc88db089d37d85ba0562ca48576cc25508013d.json  query-702f93977d9ae19a951883bed36a824e101431994cdd0f6459f9b0a8bca3ba2a.json  query-7b92a18a23fd72e129d4bcaf54cb2c346f5aab5e79fd51df4e59821e56c85668.json  query-836187169089059f6813ece9ece13369365176ab0041eb3efd0e01055522934d.json  query-976d81db59e20fdcd2107b623fc0e4016c6730036b870867e9143a33adf374a5.json  query-d5713113ea8b9d789fbd68350f407e128ad4d62ceab6220e5206dc6dc8d8a28a.json  query-f5fa8f8e85ce73da1330cba7e9f5e87e758570dbe44bd1e787ffbc91960fc50e.json  query-f9fcb20476526c80048d4aecf97607a8b4a5621b68a0b47174c4e1283de28ae8.json
backend/docker/grafana/dashboards/: api-overview.json
backend/docker/grafana/provisioning/dashboards/: dashboards.yml
backend/docker/initdb/: 00-roles.sql
backend/docker/opensearch/: generate-certs.ps1  generate-certs.sh  opensearch.yml  opensearch_dashboards.yml
backend/docker/prometheus/: prometheus.yml
backend/migrations/: 20260610000001_init.sql  20260709000001_drop_legacy_sessions.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs  telemetry.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs  tokens.rs
backend/src/db/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  health.rs  metrics.rs  mod.rs  search.rs  sessions.rs  users.rs
backend/src/middleware/: auth.rs  client.rs  mod.rs  security_headers.rs  validation.rs
backend/src/models/: auth.rs  mod.rs  pagination.rs  session.rs  user.rs
backend/src/monitoring/: client.rs  event.rs  layer.rs  log_layer.rs  metrics.rs  mod.rs  shipper.rs
backend/src/routes/: mod.rs
backend/src/search/: client.rs  index.rs  mod.rs  query.rs  service.rs
backend/src/session/: mod.rs  store.rs
backend/tests/: integration.rs
frontend/: .dockerignore  .gitignore  (+16 more)
(+45 files in other folders)
