[package]
name = "websitebase-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Backend d'API REST sécurisé (Axum/PostgreSQL) pour le projet WebSiteBase"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# --- Runtime asynchrone ---
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal", "net"] }

# --- Framework HTTP ---
axum = { version = "0.8.1", features = ["macros", "json", "query"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }

# --- Middlewares ---
tower = { version = "0.5.2", features = ["timeout", "limit"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "cors",
    "limit",
    "timeout",
    "request-id",
    "set-header",
    "sensitive-headers",
    "catch-panic",
] }
tower_governor = "0.7.0"

# --- Base de données ---
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "time",
    "macros",
    "migrate",
] }

# --- Sérialisation / validation ---
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
# garde : validation par derive, sans dépendance proc-macro non maintenue
# (contrairement à `validator`, qui tire `proc-macro-error2`, cf. RUSTSEC-2026-0173).
garde = { version = "0.23.0", features = ["derive", "email"] }

# --- Authentification ---
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"

# --- Observabilité ---
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "fmt"] }

# --- Erreurs / utilitaires ---
thiserror = "2.0.11"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
time = { version = "0.3.37", features = ["serde", "serde-well-known", "formatting"] }
dotenvy = "0.15.7"

[dev-dependencies]
# Tests d'intégration HTTP de bout en bout
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
# Réduit la taille du binaire final (image distroless).
opt-level = 3
lto = "thin"
codegen-units = 1
# NB : on conserve le déroulement de pile (pas de `panic = "abort"`) pour que
# le middleware CatchPanic puisse transformer une panique de handler en 500
# générique sans faire tomber tout le serveur (résilience/disponibilité).
strip = true
